# svgmod

./: CMakeLists.txt  README  svgmod.cpp
